<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stalin: Complete set of works</string>
    <string name="quit">Quit</string>
    <string name="install_modules">Install modules</string>
    <string name="update_modules">Update modules</string>
    <string name="loading">Loading...</string>
    <string name="loading_list_modules">Loading list of modules</string>
    <string name="failed_loading_list_modules">Failed loading list of modules</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    
    <string name="toast_dont_save_scroll">The position is not saved</string>
    
    <string name="textView_List_Title">Table of contents</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    
    <string name="pref">Settings</string>
    <string name="pref_section_title_one">Appearance</string>
    <string name="pref_dark_theme_title">Dark interface</string>
    <string name="pref_dark_theme_summary">Dark/light interface switcher.</string>
    <string name="pref_bg_title">Activate background</string>
    <string name="pref_bg_summary"></string>
    <string name="pref_section_title_two">Functional</string>
    <string name="pref_open_vol_title">Store opened</string>
    <string name="pref_open_vol_summary">Open last chapter at start up application</string>
    
    <!-- Авторы -->
    
    <string name="author_title_developer">Разработка</string>
    <string name="author_title_thanks">Благодарность</string>
    <string name="author_title_design_icons">Дизайн иконки</string>
    <string name="author_develoepr_0">Киселёв Александр</string>    
    <string name="author_thanks_0">Марии Куликовой</string>    
    <string name="author_thanks_1">Александру Морозову</string>
    <string name="author_design_icons">Илья Ефимов</string>
    
    <string name="slogan">Встретимся в СССР!</string>
</resources>
